Add registry category mappings
